--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "LC2RateMyPosts",
+  "name": "LC2Search",
   "version": "1.0.0",
   "description": "LetzteChance.Org Hybrid Application for Windows,Android and IOS",
   "devDependencies": {
     "electron": "^1.7.9",
     "electron-builder": "^19.48.3",
     "electron-packager": "^10.1.0"
+  },
+  "author": {
+    "name": "Electron Community"
   },
   "main": "main.js",
   "scripts": {
@@ -19,15 +22,15 @@
   "repository": "",
   "keywords": [
     "Electron",
-    "LC2RateMyPosts",
-    "Links,Urls,Documents,Movies/Tv-Series,Audio",
+    "LC2Search",
+    "Links,Urls,Downloads,Documents,Movies/Tv-Series,Audio, Source Code",
     "Search",
     "demo"
   ],
   "author": "David Honisch",
   "license": "MIT",
   "build": {
-    "appId": "org.letztechance.LC2PostsApp",
+    "appId": "org.letztechance.LC2Search",
     "copyright": "Copyright © 2018 ${David Honisch}",
     "dmg": {
       "contents": [
@@ -50,7 +53,7 @@
       ]
     },
     "win": {
-      "title": "LC2RateMyPosts",
+      "title": "LC2Search",
       "target": "NSIS",
       "icon": "build/icon.ico"
     }
